--- a/.gitub/workflows/gradle-build.yml
+++ b/.gitub/workflows/gradle-build.yml
@@ -1,6 +1,6 @@
 name: gradle-build
 run-name: gradle-build
-on: [push]
+on: [push, pull-request]
 jobs:
   Gradle-Run-Tests:
     runs-on: ubuntu-latest
