Update and rename gradle-build.yml to gradle-build.yml

--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -1,6 +1,6 @@
 name: gradle-build
 run-name: gradle-build
-on: [push, pull-request]
+on: [push]
 jobs:
   Gradle-Run-Tests:
     runs-on: ubuntu-latest
