--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@HEAD
-      - run: gradle build
+      - run: gradle build -i
