--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -3,7 +3,7 @@ run-name: gradle-build
 on: [push]
 jobs:
   Gradle-Run-Tests:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@HEAD
