--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -5,6 +5,14 @@ jobs:
   Gradle-Run-Tests:
     runs-on: windows-latest
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@HEAD
-      - run: gradle build -i
+      - uses: actions/checkout@HEAD
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: test -i
+          gradle-version: 7.4.2
