--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -5,7 +5,8 @@ jobs:
   Gradle-Run-Tests:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@HEAD
+      - name: Check out repository code
+        uses: actions/checkout@HEAD
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
